# Eni_Jules2

./: .gitignore  README.md  jules.md
.jules/: session_start_identity.py
kage_gaki/: Cargo.toml
kage_gaki/src/: main.rs
kage_gaki/src/comm/: mod.rs
kage_gaki/src/crypto/: mod.rs
kage_gaki/src/evasion/: mod.rs
kage_gaki/src/persistence/: mod.rs
sophia_project/: Cargo.toml
sophia_project/sophia_core/: Cargo.toml
sophia_project/sophia_core/src/: main.rs
sophia_project/sophia_core/src/comm/: mod.rs
sophia_project/sophia_core/src/crypto/: mod.rs
sophia_project/sophia_core/src/defense/: mod.rs
sophia_project/sophia_core/src/stealth/: mod.rs
sophia_project/sophia_macros/: Cargo.toml
sophia_project/sophia_macros/src/: lib.rs
sophia_project/sophia_stager/: Cargo.toml
sophia_project/sophia_stager/src/: main.rs
