[package]
name = "kage_gaki"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
quinn = "0.10"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
rand_distr = "0.4"
sha2 = "0.10"
aes = "0.8"
cipher = "0.4"
bytes = "1.5"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
