[workspace]
members = [
    "sophia_core",
    "sophia_stager",
    "sophia_macros",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ENI"]

[workspace.dependencies]
sophia_macros = { path = "sophia_macros" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
argon2 = "0.5"
chacha20poly1305 = "0.10"
libc = "0.2"
nix = { version = "0.27", features = ["fs", "process", "mman"] }
quinn = "0.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
