[package]
name = "sophia_core"
version = "0.1.0"
edition = "2021"

[dependencies]
sophia_macros = { path = "../sophia_macros" }
argon2 = "0.5"
chacha20poly1305 = "0.10"
libc = "0.2"
nix = { version = "0.27", features = ["fs", "process", "mman"] }
quinn = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand_distr = "0.4"
sc = "0.2"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio = { version = "1.0", features = ["full"] }
